[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = "A Flask toolbox for multiple tools."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
docker = "^7.1.0"
pyshark = "^0.6"
python-nmap = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
