[tool.poetry]
name = "Toolbox SAJ"
version = "0.1.0"
description = "A Flask toolbox for multiple tools in cybersecurity."
authors = ["Amine Boukherouba <amine.boukherouba-lapierre@supdevinci-edu.fr>", 
           "Stéphane YE <stephane.ye@supdevinci-edu.fr>", 
           "Jeremy Corinthe <jeremy.corinthe@supdevinci-edu.fr>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = ">=1.1.1,<3.1"
docker = "^7.1.0"
pyshark = "^0.6"
python-nmap = "^0.7.1"
wapiti3 = "^3.2.2"
pytz = "^2025.1"
zaproxy = "^0.4.0"
flask-socketio = "^5.5.1"
pexpect = "^4.9.0"
eventlet = "^0.39.0"
zstandard = "0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

